--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/styles/index.scss">
     <script src="assets/scripts/main.js"></script>
-    <title>home</title>
+    <title>Hogar</title>
 </head>
 <body>
 
@@ -14,35 +14,34 @@
         <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
             <ul>
-                <li><a href="#">NOTICIAS</a></li>
-                <li><a href="#">PERSONAJES</a></li>
-                <li><a href="#">PREGUNTAS FRECUENTES</a></li>
-                <li><a href="#">INICIAR SESION</a></li>
-                <li class="boton"><a href="">REGISTRARSE</a></li>
+                <li><a href="iniciarSesion.html">NOTICIAS</a></li>
+                <li><a href="iniciarSesion.html">PERSONAJES</a></li>
+                <li><a href="iniciarSesion.html">PREGUNTAS FRECUENTES</a></li>
+                <li><a href="iniciarSesion.html">INICIAR SESION</a></li>
+                <li class="boton"><a href="registro.html">REGISTRARSE</a></li>
             </ul>
         </nav>
         <button class="menu_hamburguesa"><i class="fas fa-bars"></i></button>
     </section>
     <nav class="menu_movil">
         <ul>
-            <li><a href="#">NOTICIAS</a></li>
-            <li><a href="#"></a>PERSONAJES</li>
-            <li><a href="#"></a>PREGUNTAS FRECUENTES</li>
-            <li><a href="#"></a>INICIAR SESION</li>
-            <li><a href="#"></a>REGISTRARSE</li>
+            <li><a href="iniciarSesion.html">NOTICIAS</a></li>
+            <li><a href="iniciarSesion.html">PERSONAJES</a></li>
+            <li><a href="iniciarSesion.html">PREGUNTAS FRECUENTES</a></li>
+            <li><a href="iniciarSesion.html">INICIAR SESION</a></li>
+            <li><a href="registro.html">REGISTRARSE</a></li>
         </ul>
     </nav>
 </header>
 <main>
     <h1>BIENVENIDO</h1>
     <p>¿Seguro de empezar esta nueva aventura?</p>
-    <a href="#">EMPEZAR</a>
+    <a href="registro.html">EMPEZAR</a>
 </main>
 <footer>
-    <div></div>
-    <div>
-        <a href="#">cookie</a>  -  <a href="#">politica de privacidad</a>  -  <a href="#">aviso legal</a></p>
-    </div>
+    <a href="#">cookie</a>
+    <a href="#">politica de privacidad</a>
+    <a href="#">aviso legal</a>
     <div>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook"></i>
