--- a/src/indexRegistrado.html
+++ b/src/indexRegistrado.html
@@ -10,10 +10,10 @@
 <body>
 <header>    <! ––Encabezado -- >
   <section class="section">
-    <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
+    <a href="indexRegistrado.html#ancla"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
     <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
       <ul>
-        <li><a href="#">NOTICIAS</a></li>
+        <li><a href="noticias.html">NOTICIAS</a></li>
         <li><a href="listado.html">PERSONAJES</a></li>
         <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
         <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
@@ -23,7 +23,7 @@
   </section>
   <nav class="menu_movil">
     <ul>
-      <li><a href="#">NOTICIAS</a></li>
+      <li><a href="noticias.html">NOTICIAS</a></li>
       <li><a href="listado.html">PERSONAJES</a></li>
       <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
       <li><a href=""><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
@@ -34,7 +34,7 @@
 <main>
   <h1>BIENVENIDO</h1>
   <p>¿Seguro de empezar esta nueva aventura?</p>
-  <a href="#">EMPEZAR</a>
+  <a id="ancla" href="noticias.html">EMPEZAR</a>
 </main>
 <footer>
   <a href="#">cookie</a>
