--- a/src/registro.html
+++ b/src/registro.html
@@ -11,25 +11,25 @@
 
 <header>    <! ––Encabezado -- >
     <section class="section">
-        <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
+        <a href="index.html"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
             <ul>
-                <li><a href="#">NOTICIAS</a></li>
-                <li><a href="#">PERSONAJES</a></li>
-                <li><a href="#">PREGUNTAS FRECUENTES</a></li>
-                <li><a href="iniciarSesion.html">INICIAR SESION</a></li>
-                <li class="boton"><a href="">REGISTRARSE</a></li>
+                <li><a href="iniciarSesion.html#ancla">NOTICIAS</a></li>
+                <li><a href="iniciarSesion.html#ancla">PERSONAJES</a></li>
+                <li><a href="iniciarSesion.html#ancla">PREGUNTAS FRECUENTES</a></li>
+                <li><a href="iniciarSesion.html#ancla">INICIAR SESION</a></li>
+                <li class="boton"><a href="registro.html#ancla">REGISTRARSE</a></li>
             </ul>
         </nav>
         <button class="menu_hamburguesa"><i class="fas fa-bars"></i></button>
     </section>
     <nav class="menu_movil">
         <ul>
-            <li><a href="#">NOTICIAS</a></li>
-            <li><a href="#">PERSONAJES</a></li>
-            <li><a href="#">PREGUNTAS FRECUENTES</a></li>
-            <li><a href="iniciarSesion.html">INICIAR SESION</a></li>
-            <li><a href="#">REGISTRARSE</a></li>
+            <li><a href="iniciarSesion.html#ancla">NOTICIAS</a></li>
+            <li><a href="iniciarSesion.html#ancla">PERSONAJES</a></li>
+            <li><a href="iniciarSesion.html#ancla">PREGUNTAS FRECUENTES</a></li>
+            <li><a href="iniciarSesion.html#ancla">INICIAR SESION</a></li>
+            <li><a href="registro.html#ancla">REGISTRARSE</a></li>
         </ul>
     </nav>
 </header>
@@ -37,7 +37,7 @@
 <main>
     <section>
         <div class="colocar">
-            <div class="caja">
+            <div id="ancla" class="caja">
                 <h1>REGISTRO</h1>
                 <form>
                     <label type="name">Usuario</label>
