--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <header>    <! ––Encabezado -- >
     <section class="section">
-        <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
+        <a href="index.html#ancla"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
             <ul>
                 <li><a href="iniciarSesion.html">NOTICIAS</a></li>
@@ -36,7 +36,7 @@
 <main>
     <h1>BIENVENIDO</h1>
     <p>¿Seguro de empezar esta nueva aventura?</p>
-    <a href="registro.html">EMPEZAR</a>
+    <a id="ancla" href="registro.html">EMPEZAR</a>
 </main>
 <footer>
     <a href="#">cookie</a>
