--- a/src/listado.html
+++ b/src/listado.html
@@ -10,11 +10,11 @@
 <body>
 <header>    <! ––Encabezado -- >
     <section class="section">
-        <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
+        <a href="indexRegistrado.html"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
             <ul>
-                <li><a href="#">NOTICIAS</a></li>
-                <li><a href="#">PERSONAJES</a></li>
+                <li><a href="noticias.html">NOTICIAS</a></li>
+                <li><a href="listado.html">PERSONAJES</a></li>
                 <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
                 <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
             </ul>
@@ -23,8 +23,8 @@
     </section>
     <nav class="menu_movil">
         <ul>
-            <li><a href="#">NOTICIAS</a></li>
-            <li><a href="#">PERSONAJES</a></li>
+            <li><a href="noticias.html">NOTICIAS</a></li>
+            <li><a href="listado.html#ancla">PERSONAJES</a></li>
             <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
             <li><a href=""><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
         </ul>
@@ -34,33 +34,33 @@
     <div>
         <h1>Listado de Pokemons</h1>
     </div>
-    <section>
+    <section id="ancla">
         <div class="evolucion">
             <div><a href="pokemon.html"><img class="primera_evolucion" src="assets/img/bulbasur.png"><h3>Bulbasur</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="segunda_evolucion" src="assets/img/ivysaur.png"><h3 class="separador">Ivysaur</h3></a></div>
+            <div><a href="pokemon.html"><img class="segunda_evolucion" src="assets/img/ivysaur.png"><h3 class="separador">Ivysaur</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="tercera_evolucion" src="assets/img/venasaur.png"><h3>Venasaur</h3></a></div>
+            <div><a href="pokemon.html"><img class="tercera_evolucion" src="assets/img/venasaur.png"><h3>Venasaur</h3></a></div>
         </div>
         <div class="evolucion">
-            <div><a href="#"><img class="primera_evolucion" src="assets/img/charmander.png"><h3>Charmander</h3></a></div>
+            <div><a href="pokemon.html"><img class="primera_evolucion" src="assets/img/charmander.png"><h3>Charmander</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="segunda_evolucion" src="assets/img/charmaleon.png"><h3 class="separador">Charmaleon</h3></a></div>
+            <div><a href="pokemon.html"><img class="segunda_evolucion" src="assets/img/charmaleon.png"><h3 class="separador">Charmaleon</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="tercera_evolucion" src="assets/img/charizard.png"><h3 class="texto_charizard">Charizard</h3></a></div>
+            <div><a href="pokemon.html"><img class="tercera_evolucion" src="assets/img/charizard.png"><h3 class="texto_charizard">Charizard</h3></a></div>
         </div>
         <div class="evolucion">
-            <div><a href="#"><img class="primera_evolucion" src="assets/img/squirtle.png"><h3>Squirtle</h3></a></div>
+            <div><a href="pokemon.html"><img class="primera_evolucion" src="assets/img/squirtle.png"><h3>Squirtle</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="segunda_evolucion" src="assets/img/wartortle.png"><h3 class="separador">Wartortle</h3></a></div>
+            <div><a href="pokemon.html"><img class="segunda_evolucion" src="assets/img/wartortle.png"><h3 class="separador">Wartortle</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
-            <div><a href="#"><img class="tercera_evolucion" src="assets/img/blastoise.png"><h3 class="texto_blastoise">Blastoise</h3></a></div>
+            <div><a href="pokemon.html"><img class="tercera_evolucion" src="assets/img/blastoise.png"><h3 class="texto_blastoise">Blastoise</h3></a></div>
         </div>
     </section>
 </main>
