--- a/src/preguntasFrecuentes.html
+++ b/src/preguntasFrecuentes.html
@@ -13,8 +13,8 @@
         <a href="indexRegistrado.html"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
             <ul>
-                <li><a href="noticias.html">NOTICIAS</a></li>
                 <li><a href="listado.html">PERSONAJES</a></li>
+                <li><a href="noticias.html">NOTICIAS</a></li>
                 <li><a href="preguntasFrecuentes.html#ancla">PREGUNTAS FRECUENTES</a></li>
                 <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
             </ul>
@@ -23,8 +23,8 @@
     </section>
     <nav class="menu_movil">
         <ul>
-            <li><a href="noticias.html">NOTICIAS</a></li>
             <li><a href="listado.html">PERSONAJES</a></li>
+            <li><a href="noticias.html">NOTICIAS</a></li>
             <li><a href="preguntasFrecuentes.html#ancla">PREGUNTAS FRECUENTES</a></li>
             <li><a href=""><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
         </ul>
@@ -43,11 +43,11 @@
     </section>
     <section>
         <div>
-            <h3>¿Como volver al listado de pokemons cuando estoy viendo las habilidades y caracteristicas de un personaje?</h3>
+            <h3>¿Como volver al listado de pokemons?</h3>
             <p>En la parte superior a la izquierda ,abajo del encabezado encontraras una flecha con el texto volver.A contiuacion pulsando te llevara a el listado de personajes completo.</p>
         </div>
         <div class="texto_grande">
-            <h3>¿Como puedo ir al menu principal desde la pagina de inicio de sesion o registro?</h3>
+            <h3>¿Como puedo ir al menu principal desde la pagina de inicio de sesion?</h3>
             <p>En la parte superior a la izquierda ,en el encabezado encontraras un apartado que pone HOGAR en el que pulsando te encaminara al menu principal o simplemente pulsando el logo de pokemon.</p>
         </div>
     </section>
