organizacion de codigo y comentarios

--- a/src/indexRegistrado.html
+++ b/src/indexRegistrado.html
@@ -8,7 +8,7 @@
     <title>Hogar</title>
 </head>
 <body>
-<header>    <! ––Encabezado -- >
+<header>    <!-- Encabezado -->
   <section class="section">
     <a href="indexRegistrado.html#ancla"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
     <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
@@ -16,7 +16,7 @@
         <li><a href="listado.html">PERSONAJES</a></li>
         <li><a href="noticias.html">NOTICIAS</a></li>
         <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
-        <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
+        <li class="ultimoLi"><a href="indexRegistrado.html"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
       </ul>
     </nav>
     <button class="menu_hamburguesa"><i class="fas fa-bars"></i></button>
@@ -26,7 +26,7 @@
       <li><a href="listado.html">PERSONAJES</a></li>
       <li><a href="noticias.html">NOTICIAS</a></li>
       <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
-      <li><a href=""><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
+      <li><a href="indexRegistrado.html"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
     </ul>
   </nav>
 </header>
@@ -37,9 +37,9 @@
   <a id="ancla" href="noticias.html">EMPEZAR</a>
 </main>
 <footer>
-  <a href="#">cookie</a>
-  <a href="#">politica de privacidad</a>
-  <a href="#">aviso legal</a>
+  <a href="error_4004.html">cookie</a>
+  <a href="error_4004.html">politica de privacidad</a>
+  <a href="error_4004.html">aviso legal</a>
   <div>
     <i class="fab fa-instagram"></i>
     <i class="fab fa-facebook"></i>
