--- a/src/listado.html
+++ b/src/listado.html
@@ -8,7 +8,7 @@
     <title>Pokemons</title>
 </head>
 <body>
-<header>    <! ––Encabezado -- >
+<header>    <!-- Encabezado -->
     <section class="section">
         <a href="indexRegistrado.html"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
@@ -16,7 +16,7 @@
                 <li><a href="listado.html">PERSONAJES</a></li>
                 <li><a href="noticias.html">NOTICIAS</a></li>
                 <li><a href="preguntasFrecuentes.html">PREGUNTAS FRECUENTES</a></li>
-                <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
+                <li class="ultimoLi"><a href="indexRegistrado.html"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
             </ul>
         </nav>
         <button class="menu_hamburguesa"><i class="fas fa-bars"></i></button>
@@ -35,7 +35,7 @@
         <h1>Listado de Pokemons</h1>
     </div>
     <section id="ancla">
-        <div class="evolucion">
+        <div class="evolucion"> <!-- Lo divido por pokemos con sus evoluciones y luego separo cada evolucion mediante flechas -->
             <div><a href="pokemon.html"><img class="primera_evolucion" src="assets/img/bulbasur.png"><h3>Bulbasur</h3></a></div>
             <i class="fa fa-arrow-right"></i>
             <i class="fa fa-arrow-down"></i>
@@ -65,9 +65,9 @@
     </section>
 </main>
 <footer>
-    <a href="#">cookie</a>
-    <a href="#">politica de privacidad</a>
-    <a href="#">aviso legal</a>
+    <a href="error_4004.html">cookie</a>
+    <a href="error_4004.html">politica de privacidad</a>
+    <a href="error_4004.html">aviso legal</a>
     <div>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook"></i>
