--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -8,10 +8,10 @@
     <title>Pokemon</title>
 </head>
 <body>
-<header>    <! ––Encabezado -- >
+<header>    <!-- Encabezado -->
     <section class="section">
-        <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
-        <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
+        <a href="#"><img src="./assets/img/logo_pokemon.png"></a>   <!-- logo -->
+        <nav class="menu_ordenador">   <!-- Diferentes redirecciones de mi encabezado -->
             <ul>
                 <li><a href="listado.html">PERSONAJES</a></li>
                 <li><a href="noticias.html">NOTICIAS</a></li>
@@ -36,11 +36,11 @@
     <a href="listado.html#ancla"><i class="fas fa-arrow-left"></i>Volver</a>
     <h1>Bulbasur</h1>
     <section>
-        <img src="assets/img/bulbasur.png">
+        <img src="assets/img/bulbasur.png"> <!-- imagen del pokemon -->
         <div class="principal">
             <p>Este Pokémon nace con una semilla en el lomo, que
-                brota con el paso del tiempo.</p>
-            <div class="caja">
+                brota con el paso del tiempo.</p> <!-- su descripcion -->
+            <div class="caja"> <!-- caja con datos del mismo -->
                 <div>
                     <div><h2>Altura</h2><p>0,7 m</p></div>
                     <div><h2>Peso</h2><p>6,9 kg</p></div>
@@ -55,7 +55,7 @@
     </section>
 
     <section class="debilidadesYtipos">
-        <div>
+        <div> <!-- debilidades y tipos del pokemon -->
             <h3>Debilidad</h3>
             <div>
                 <div>
