--- a/src/preguntasFrecuentes.html
+++ b/src/preguntasFrecuentes.html
@@ -8,15 +8,15 @@
     <title>Preguntas Frecuentes</title>
 </head>
 <body>
-<header>    <! ––Encabezado -- >
+<header>    <!-- Encabezado -->
     <section class="section">
-        <a href="indexRegistrado.html"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
-        <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
+        <a href="indexRegistrado.html"><img src="./assets/img/logo_pokemon.png"></a>   <!-- logo -->
+        <nav class="menu_ordenador">   <!-- Diferentes redirecciones de mi encabezado -->
             <ul>
                 <li><a href="listado.html">PERSONAJES</a></li>
                 <li><a href="noticias.html">NOTICIAS</a></li>
                 <li><a href="preguntasFrecuentes.html#ancla">PREGUNTAS FRECUENTES</a></li>
-                <li class="ultimoLi"><a href="#"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
+                <li class="ultimoLi"><a href="indexRegistrado.html"><i  class="far fa-user-circle"></i>Jose Antonio</a></li>
             </ul>
         </nav>
         <button class="menu_hamburguesa"><i class="fas fa-bars"></i></button>
@@ -31,7 +31,9 @@
     </nav>
 </header>
 <main>
-    <section id="ancla">
+    <!-- he creado una clase texto_grande que explicare mejor en el archivo preguntasFrecuentes.scss -->
+    <!-- cada noticia con si titulo y su explicacion correspondiente -->
+    <section id="ancla"> <!-- ancla -->
         <div class="texto_grande">
             <h3>¿Como registrarte?</h3>
             <p>En la parte superior derecha hay un boton donde pone “REGISTRARSE” en el que pulsandolo te llevara a una pagina en la que debes de introducir tus datos  y le darias al boton de abajo del formulario y aceptando los terminos. Y finalmente te llevara a la pagina de inicio con tu perfil iniciado.</p>
@@ -53,9 +55,9 @@
     </section>
 </main>
 <footer>
-    <a href="#">cookie</a>
-    <a href="#">politica de privacidad</a>
-    <a href="#">aviso legal</a>
+    <a href="error_4004.html">cookie</a>
+    <a href="error_4004.html">politica de privacidad</a>
+    <a href="error_4004.html">aviso legal</a>
     <div>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook"></i>
