--- a/src/error_4004.html
+++ b/src/error_4004.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<header>    <! ––Encabezado -- >
+<header>    <!-- Encabezado -->
     <section class="section">
         <a href="index.html#ancla"><img src="./assets/img/logo_pokemon.png"></a>   <! ––logo-->
         <nav class="menu_ordenador">   <! ––Diferentes redirecciones de mi encabezado-->
@@ -34,15 +34,15 @@
     </nav>
 </header>
 <main>
-    <div class="caja" >
+    <div class="caja">
         <h1>Error 404</h1>
-        <img class="pokeball" src="assets/img/pokeball.png">
+        <img class="pokeball" src="assets/img/pokeball.png"> <!-- Imagen pokemon -->
     </div>
 </main>
 <footer>
-    <a href="#">cookie</a>
-    <a href="#">politica de privacidad</a>
-    <a href="#">aviso legal</a>
+    <a href="error_4004.html">cookie</a>
+    <a href="error_4004.html">politica de privacidad</a>
+    <a href="error_4004.html">aviso legal</a>
     <div>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook"></i>
