--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 <main>
     <h1>BIENVENIDO</h1>
     <p>¿Seguro de empezar esta nueva aventura?</p>
-    <a id="ancla" href="registro.html">EMPEZAR</a> <!-- ancla -->
+    <a class="boton_principal" id="ancla" href="registro.html">EMPEZAR</a> <!-- ancla -->
 </main>
 <!--pie de pagina -->
 <footer>
