--- a/src/indexRegistrado.html
+++ b/src/indexRegistrado.html
@@ -34,7 +34,7 @@
 <main>
   <h1>BIENVENIDO</h1>
   <p>¿Seguro de empezar esta nueva aventura?</p>
-  <a id="ancla" href="noticias.html">EMPEZAR</a>
+  <a class="boton_principal" id="ancla" href="noticias.html">EMPEZAR</a>
 </main>
 <footer>
   <a href="error_4004.html">cookie</a>
